# Kurs_6_DZ_19.2

./: README.md  catalog.json  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0002_product_manufactured_at.py
catalog/templates/catalog/: add_product.html  catalog.html  detail_product.html  home.html  home_1.html  home_2.html
catalog/templates/catalog/includes/: inc_menu.html
config/: settings.py  urls.py
