[tool.poetry]
name = "kurs-6-dz-19-2"
version = "0.1.0"
description = ""
authors = ["Leonid Petrov <leonidpetrov637@gmail.com>"]
readme = "README.md"
packages = [{include = "kurs_6_dz_19"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
